styles/modern.css
:root{
    --taskOverDue: rgb(255, 121, 121);
    --taskBlocked: orange;
    --taskDone: #0d0; /*darkgreen;*/
    --relatedTaskOpacity: 0.5;
    --currentTaskOpacity: 1;
}

#actualContent {
    opacity: 1;
}

.taskColumn {
    background: var(--background-color);
}

.task {
    background: var(--background-color);
    border-radius: 5px;
}

.taskStart:before {
    border-radius: 5px 0 0 5px;
}

.taskTd
{
    background: var(--border-subtle-color);
    border-left: 4px solid var(--background-color);
}

.taskDayOff{
    background:repeating-linear-gradient(15deg, var(--component-label-default-color-hover), var(--border-subtle-color) 10px, var(--border-subtle-color) 10px, var(--component-label-default-color-hover) 20px);
}

.relatedTask {
    background: darkgrey;
}

.relatedTaskBox {
    background: white;
}

.taskDone[style]{
    background: color-mix(in srgb, var(--taskDone), var(--background-color) 35%);
}

.taskToday{
    background: var(--component-grid-selected-row-color)
}

.taskToday.taskDayOff{
    background: repeating-linear-gradient(15deg, var(--component-label-default-color-hover), var(--border-subtle-color) 10px, var(--border-subtle-color) 10px, var(--component-label-default-color-hover) 20px);
}

.previousDayOff::before {
    border: 2px solid var(--background-color);
    border-width: 0 2px;
    content: " ";
    position: absolute;
    height: 100%;
    margin-left: -5px;
    background:repeating-linear-gradient(15deg, var(--component-label-default-color-hover), var(--border-subtle-color) 10px, var(--border-subtle-color) 10px, var(--component-label-default-color-hover) 20px);
    width: 4px;
}


.taskWarning .taskWarningTooltip {
    background: var(--background-color);
}

.rowHeader{
	background: var(--background-color);
}

.rowHeaderSpace{
    background: var(--background-color);
}

/* Tooltip text */
.tooltiptext {
    background: var(--background-color);
    border-right: 1px solid #c8c8c8;
    border-top: 1px solid #c8c8c8;
    border-bottom: 1px solid #c8c8c8;
}


.options{
    background: var(--background-color);
}

input, select {
    color: inherit;
}

input::placeholder {
    color: var(--text-disabled-color);
}


.showareapath .taskAreaPath1 {
    background:#E0FFFF77;
}
.showareapath .taskAreaPath2 {
    background:#FAFAD277;
}
.showareapath .taskAreaPath3 {
    background:#90EE9077;
}
.showareapath .taskAreaPath4 {
    background:#87CEFA77;
}
.showareapath .taskAreaPath5 {
    background:#98FB9877;
}
.showareapath .taskAreaPath6 {
    background:#D8BFD877;
}
.showareapath .taskAreaPath7 {
    background:#FFC0CB77;
}
.showareapath .taskAreaPath8 {
    background:#7FFFD477;
}
.showareapath .taskAreaPath9 {
    background:#ADD8E677;
}
.showareapath .taskAreaPath10 {
    background:#F0808077;
}

/* Style for the right-click menu */
.right-click-menu {
    background-color: var(--background-color,rgba(255, 255, 255, 1));
}

.right-click-menu li:hover {
    background-color: var(--border-subtle-color,rgba(255, 255, 255, 1));
}

